feat(ui): migrate to external HYUIML templates for portal pages
Replaced inline HTML structures with external template files for portal pages, such as PortalTeleportPage, PortalCreatePage, and others. Integrated `TemplateProcessor` to dynamically populate templates, improving code maintainability and reducing clutter.